Refactored XTMImport and added test with sample xtm-file. Added SaveImportedTopicAction Modified how the import of topicmap is done. Added import-attribute to Topic and TopicAssociation with corresponding changes to dao-classes
git-svn-id: https://opensource.kantega.no/svn/openaksess/branches/importTopicMap@3288 fd808399-8219-4f14-9d4c-37719d9ec93d

--- a/modules/webapp/src/webapp/WEB-INF/classes/TextLabels_no_NO.properties
+++ b/modules/webapp/src/webapp/WEB-INF/classes/TextLabels_no_NO.properties
@@ -921,6 +921,7 @@ aksess.tools.versions = Historikk
 aksess.topicmaps.admin.confirmdelete = \u00d8nsker du \u00e5 slette emnekartet
 aksess.topicmaps.admin.confirmimport = \u00d8nsker du \u00e5 importere emnekartet
 aksess.topicmaps.admin.importtopicmap = Importer
+aksess.topicmaps.admin.saveimportedmap = Lagre importert emnekart
 aksess.topicmaps.admin.editable = Redigerbart
 aksess.topicmaps.admin.iseditable = Er emnekartet redigerbart?
 aksess.topicmaps.admin.name = Navn p\u00e5 emnekart
