--- a/modules/webapp/src/webapp/WEB-INF/classes/TextLabels_en_EN.properties
+++ b/modules/webapp/src/webapp/WEB-INF/classes/TextLabels_en_EN.properties
@@ -920,6 +920,7 @@ aksess.tools.versions = History
 aksess.topicmaps.admin.confirmdelete = Do you want to delete the topic map
 aksess.topicmaps.admin.confirmimport = Do you want to import the topic map
 aksess.topicmaps.admin.importtopicmap = Import
+aksess.topicmaps.admin.saveimportedmap = Save imported topic map
 aksess.topicmaps.admin.editable = Editable
 aksess.topicmaps.admin.iseditable = Is topic map editable?
 aksess.topicmaps.admin.name = Topic map name
