AP-1403: Autosave (In progress)
git-svn-id: https://opensource.kantega.no/svn/openaksess/branches/aksess-autosave@3582 fd808399-8219-4f14-9d4c-37719d9ec93d

--- a/modules/webapp/src/webapp/WEB-INF/classes/TextLabels_en_EN.properties
+++ b/modules/webapp/src/webapp/WEB-INF/classes/TextLabels_en_EN.properties
@@ -44,6 +44,11 @@ aksess.attribute.contentlist.nooption = (Not selected)
 aksess.attribute.datetime.date = Date
 aksess.attribute.datetime.time = time
 
+aksess.autosave.inprogress = Autosaving text...
+aksess.autosave.failed = Autosaving text failed
+aksess.autosave.saved = Autosaved at
+
+
 aksess.button.add = Add
 aksess.button.addassociation = Add association
 aksess.button.approve = Godkjenn
@@ -214,6 +219,7 @@ aksess.editcontent.error = Please fill out the following fields correctly:
 aksess.editcontent.exception = A error occured trying to display the field
 aksess.editcontent.inheritsfromancestors=If you do not enter any values here, they will be picked from one page further up the structure that has a value in this field.
 aksess.editcontent.lockedby = You can not edit this page since it is being edited by
+aksess.editcontent.notitle = No title
 
 aksess.editnotes.addnote=Add note
 aksess.editnotes.header=Notes
@@ -399,6 +405,7 @@ aksess.info.title = System information
 
 aksess.infomessage.deletetemplate = The template has been deleted
 aksess.infomessage.editdraft = <b>Tips:</b><br>The page you are editing is a draft and is newer than the published version.<br>Select <b>history</b> to see the version history of this page
+aksess.infomessage.editautosaved = <b>Tips:</b><br>The page you are editing is a autosaved draft and is newer than the published version.
 aksess.infomessage.editrejected = <b>Tips:</b><br>The page you're editing has been rejected by an author.
 aksess.infomessage.editwaiting = <b>Tips:</b><br>The page you're editing has not been published, it's waiting for approval by an author.
 aksess.infomessage.mmfolderinuse = The folder can't be deleted because it contains objects which must be deleted first.
@@ -793,6 +800,7 @@ aksess.showcontentinframe.showlink = <b>Go to link:</b>
 
 aksess.simpleedit.approvereminder = Please note that changes will be available only after approval by your editor.
 aksess.simpleedit.editdraft = The page you are editing is a draft and will not become visible before it is published.
+aksess.simpleedit.editautosaved = The page you are editing is a autosaved draft and will not become visible before it is published.
 
 aksess.site.alias = Alias / start catalog
 aksess.site.createhomepage = Create homepage
