--- a/modules/webapp/src/webapp/WEB-INF/classes/TextLabels_no_NO.properties
+++ b/modules/webapp/src/webapp/WEB-INF/classes/TextLabels_no_NO.properties
@@ -44,6 +44,10 @@ aksess.attribute.contentlist.nooption = (Ingen valgt)
 aksess.attribute.datetime.date = Dato
 aksess.attribute.datetime.time = klokkeslett
 
+aksess.autosave.inprogress = Lagrer tekst...
+aksess.autosave.failed = Automatisk lagring feilet
+aksess.autosave.saved = Automatisk lagret kl
+
 aksess.button.add = Legg til
 aksess.button.addassociation = Legg til plassering
 aksess.button.approve = Godkjenn
@@ -214,6 +218,7 @@ aksess.editcontent.error = Vennligst fyll ut f\u00f8lgende felt riktig:
 aksess.editcontent.exception = En feil oppsto ved visning av feltet
 aksess.editcontent.inheritsfromancestors=Dersom du ikke fyller inn noen verdi her vil denne plukkes fra siden en side lengre opp i strukturen som har dette feltet utfylt.
 aksess.editcontent.lockedby = Du kan ikke redigere sider fordi den allerede redigeres av
+aksess.editcontent.notitle = Uten tittel
 
 aksess.editnotes.addnote=Legg til notat
 aksess.editnotes.header=Notater
@@ -400,6 +405,7 @@ aksess.info.title = Systeminformasjon
 
 aksess.infomessage.deletetemplate = Malen er slettet
 aksess.infomessage.editdraft = <b>Tips:</b><br>Siden du redigerer er en kladd og er nyere enn den publiserte versjonen.<br>Klikk p\u00e5 <b>historikk</b> for \u00e5 f\u00e5 en oversikt over alle versjoner av siden
+aksess.infomessage.editautosaved = <b>Tips:</b><br>Siden du redigerer er en automatisk lagret kladd og er nyere enn den publiserte versjonen.
 aksess.infomessage.editrejected = <b>Tips:</b><br>Siden du redigerer har blitt avvist av en redakt\u00f8r.
 aksess.infomessage.editwaiting = <b>Tips:</b><br>Siden du redigerer venter p\u00e5 godkjenning av en redakt\u00f8r og er ikke publisert enn\u00e5.
 aksess.infomessage.mmfolderinuse = Mappen kan ikke slettes fordi den inneholder objekter. Slett disse f\u00f8rst.
@@ -794,6 +800,7 @@ aksess.showcontentinframe.showlink = <b>G\u00e5 til lenke:</b>
 
 aksess.simpleedit.approvereminder = Husk at endringer ikke blir synlig f\u00f8r de er godkjent av din redakt\u00f8r.
 aksess.simpleedit.editdraft = Siden du redigerer er en kladd og blir ikke synlig for andre f\u00f8r den blir publisert
+aksess.simpleedit.editautosaved = Siden du redigerer er en automatisk lagret kladd og blir ikke synlig for andre f\u00f8r den blir publisert
 
 aksess.site.alias = Alias/startkatalog
 aksess.site.createhomepage = Opprett hjemmeside
