legge til flere filer samtidig
git-svn-id: https://opensource.kantega.no/svn/openaksess/branches/html5admin@3658 fd808399-8219-4f14-9d4c-37719d9ec93d

--- a/modules/webapp/src/webapp/WEB-INF/classes/TextLabels_no_NO.properties
+++ b/modules/webapp/src/webapp/WEB-INF/classes/TextLabels_no_NO.properties
@@ -615,9 +615,9 @@ aksess.multimedia.sizeinfo = Angi st\u00f8rrelse (bredde og h\u00f8yde) p\u00e5 
 aksess.multimedia.subfolder = mappe
 aksess.multimedia.subfolders = mapper
 aksess.multimedia.title = Multimediaarkiv
-aksess.multimedia.uploadfile.title = Last opp nytt bilde/fil
-aksess.multimedia.uploadfile = Velg filen som skal lastes opp
-aksess.multimedia.uploadfile.inprogress = Vennligst vent mens filen lastes opp
+aksess.multimedia.uploadfile.title = Last opp nye bilder/filer
+aksess.multimedia.uploadfile = Velg filen(e) som skal lastes opp
+aksess.multimedia.uploadfile.inprogress = Vennligst vent mens filen(e) lastes opp
 aksess.multimedia.uploadfile.missing = Vennligst velg en fil som skal lastes opp
 aksess.multimedia.uploadfolder = Opplastede filer
 aksess.multimedia.usage = Retningslinjer for bruk
@@ -932,7 +932,7 @@ aksess.tools.privileges = Rettigheter
 aksess.tools.replacefile = Erstatt fil
 aksess.tools.reset= Gjenopprett Min side
 aksess.tools.settings = Innstillinger
-aksess.tools.upload = Legg inn ny fil
+aksess.tools.upload = Legg inn nye filer
 aksess.tools.versions = Historikk
 
 aksess.topicmaps.admin.confirmdelete = \u00d8nsker du \u00e5 slette emnekartet
