Multiple image upload
git-svn-id: https://opensource.kantega.no/svn/openaksess/branches/html5admin@3676 fd808399-8219-4f14-9d4c-37719d9ec93d

--- a/modules/webapp/src/webapp/WEB-INF/classes/TextLabels_en_EN.properties
+++ b/modules/webapp/src/webapp/WEB-INF/classes/TextLabels_en_EN.properties
@@ -70,6 +70,7 @@ aksess.button.reject = Reject
 aksess.button.remove = Remove
 aksess.button.replaceattachment = Replace file
 aksess.button.save = Save
+aksess.button.saveandnext = Save and continue to next image
 aksess.button.savecrop = Save cropped image
 aksess.button.savedraft = Save draft
 aksess.button.savemetadata = Save metadata
