--- a/modules/webapp/src/webapp/WEB-INF/classes/TextLabels_no_NO.properties
+++ b/modules/webapp/src/webapp/WEB-INF/classes/TextLabels_no_NO.properties
@@ -70,6 +70,7 @@ aksess.button.reject = Forkast
 aksess.button.remove = Fjern
 aksess.button.replaceattachment = Erstatt fil
 aksess.button.save = Lagre
+aksess.button.saveandnext = Lagre og fortsett til neste bilde
 aksess.button.savecrop = Lagre utsnitt
 aksess.button.savedraft = Lagre kladd
 aksess.button.savemetadata = Lagre metadata
@@ -619,6 +620,7 @@ aksess.multimedia.uploadfile.title = Last opp nye bilder/filer
 aksess.multimedia.uploadfile = Velg filen(e) som skal lastes opp
 aksess.multimedia.uploadfile.inprogress = Vennligst vent mens filen(e) lastes opp
 aksess.multimedia.uploadfile.missing = Vennligst velg en fil som skal lastes opp
+aksess.multimedia.uploadfile.label = Etter at filene har blitt lastet opp f\u00e5r du muligheten til \u00e5 endre hvert bilde sin informasjon
 aksess.multimedia.uploadfolder = Opplastede filer
 aksess.multimedia.usage = Retningslinjer for bruk
 aksess.multimedia.width = Bredde
