Upload multiple images complete
git-svn-id: https://opensource.kantega.no/svn/openaksess/branches/html5admin@3677 fd808399-8219-4f14-9d4c-37719d9ec93d

--- a/modules/webapp/src/webapp/WEB-INF/classes/TextLabels_no_NO.properties
+++ b/modules/webapp/src/webapp/WEB-INF/classes/TextLabels_no_NO.properties
@@ -620,7 +620,7 @@ aksess.multimedia.uploadfile.title = Last opp nye bilder/filer
 aksess.multimedia.uploadfile = Velg filen(e) som skal lastes opp
 aksess.multimedia.uploadfile.inprogress = Vennligst vent mens filen(e) lastes opp
 aksess.multimedia.uploadfile.missing = Vennligst velg en fil som skal lastes opp
-aksess.multimedia.uploadfile.label = Etter at filene har blitt lastet opp f\u00e5r du muligheten til \u00e5 endre hvert bilde sin informasjon
+aksess.multimedia.uploadfile.label = Etter at filene har blitt lastet opp f\u00e5r du muligheten til \u00e5 endre informasjonen til hvert bilde
 aksess.multimedia.uploadfolder = Opplastede filer
 aksess.multimedia.usage = Retningslinjer for bruk
 aksess.multimedia.width = Bredde
