AP-1403: Autosave on articles
git-svn-id: https://opensource.kantega.no/svn/openaksess/branches/aksess-autosave@3874 fd808399-8219-4f14-9d4c-37719d9ec93d

--- a/modules/webapp/src/webapp/WEB-INF/classes/TextLabels_en_EN.properties
+++ b/modules/webapp/src/webapp/WEB-INF/classes/TextLabels_en_EN.properties
@@ -45,8 +45,8 @@ aksess.attribute.datetime.date = Date
 aksess.attribute.datetime.time = time
 
 aksess.autosave.inprogress = Autosaving text...
-aksess.autosave.failed = Autosaving text failed
-aksess.autosave.saved = Autosaved at
+aksess.autosave.failed = Autosaving text failed. This might be caused by editing multiple pages at the same time.
+aksess.autosave.saved = Temporary version saved at
 
 
 aksess.button.add = Add
