--- a/modules/webapp/src/webapp/WEB-INF/classes/TextLabels_no_NO.properties
+++ b/modules/webapp/src/webapp/WEB-INF/classes/TextLabels_no_NO.properties
@@ -45,8 +45,8 @@ aksess.attribute.datetime.date = Dato
 aksess.attribute.datetime.time = klokkeslett
 
 aksess.autosave.inprogress = Lagrer tekst...
-aksess.autosave.failed = Automatisk lagring feilet
-aksess.autosave.saved = Automatisk lagret kl
+aksess.autosave.failed = Automatisk lagring feilet. Dette kan skyldes at du redigerer flere sider samtidig.
+aksess.autosave.saved = Midlertidig versjon lagret kl
 
 aksess.button.add = Legg til
 aksess.button.addassociation = Legg til plassering
@@ -673,6 +673,7 @@ aksess.navigator.sort=Sortering
 aksess.navigator.title.shortcut = (Snarvei)
 aksess.navigator.notes = notater
 aksess.navigator.hints.draft = Denne siden er lagret som er kladd
+aksess.navigator.hints.autosaveddraft = Siden du ser er en automatisk lagret kladd
 aksess.navigator.hints.changefromdate = Denne siden har en endring frem i tid
 
 aksess.note.text = Her kan du skrive inn en melding til innholdsprodusenten om hvilke endringer som b\u00f8r gj\u00f8res.
